# Lumiverse

./: .gitignore  LICENSE  README(OSX).md  README.md  output.exr
Driver/source/: BufferDriver.cpp  BufferDriver.h  CMakeLists.txt
Lumiverse/source/: CMakeLists.txt  Doxyfile  Doxyfile.in  LumiverseCore.i  LumiverseSharp.i
Lumiverse/source/Demos/: CMakeLists.txt
Lumiverse/source/Demos/ArnoldDebug/: CMakeLists.txt  Main.cpp
Lumiverse/source/Demos/CueLight/: CMakeLists.txt  Cue.cpp  Cue.h  CueLightDemo.cpp  CueList.cpp  CueList.h  Layer.cpp  Layer.h  Playback.cpp  Playback.h  Programmer.cpp  Programmer.h  README.md
Lumiverse/source/Demos/DMXReceiver/: Server.js  receiver.py  test.html
Lumiverse/source/Demos/FeatureGenerator/: CMakeLists.txt  main.cpp
Lumiverse/source/Demos/JuceWindowApplication/: JuceWindowApplication.jucer
Lumiverse/source/Demos/JuceWindowApplication/Builds/MacOSX/: Info.plist  RepaintTimer.cpp  RepaintTimer.h  libLumiverseCore.dylib
Lumiverse/source/Demos/JuceWindowApplication/Source/: AnimationComponent.cpp  AnimationComponent.h  AnimationTimer.cpp  AnimationTimer.h  DeviceComponent.cpp  DeviceComponent.h  GuiComponent.cpp  GuiComponent.h  GuiConfig.h  Main.cpp  RefreshTimer.cpp  RenderingComponent.cpp  RenderingComponent.h  RenderingWindow.cpp  RenderingWindow.h  RepaintTimer.h
Lumiverse/source/Demos/JuceWindowApplication/lib/: libLumiverseCore.dylib
Lumiverse/source/Demos/LMSBridgeDemo/: BridgeDemo.cpp  CMakeLists.txt
Lumiverse/source/Demos/LMSBridgeDemo/PBridge/: PBridge.lmw  PBridge.rig.json  PBridgeSim.rig.json
Lumiverse/source/Demos/LMSBridgeDemo/PBridge/exr/: ambient.exr  panel_01.exr  panel_02.exr  panel_03.exr  panel_04.exr  panel_05.exr  panel_06.exr  panel_07.exr  panel_08.exr  panel_09.exr  panel_10.exr  panel_11.exr  panel_12.exr  panel_13.exr  panel_14.exr  panel_15.exr  panel_16.exr  panel_17.exr  (+39 more)
Lumiverse/source/Demos/LumiverseDemo/: CMakeLists.txt  test.cpp
Lumiverse/source/Demos/SpeedTest/: CMakeLists.txt  speed.cpp
Lumiverse/source/LumiverseCore/: CMakeLists.txt  Device.cpp  Device.h  DeviceSet.cpp  DeviceSet.h  DynamicDeviceSet.cpp  DynamicDeviceSet.h  Logger.cpp  Logger.h  LumiverseCore.h  LumiverseCore.i  LumiverseCoreConfig.h  LumiverseCoreConfig.h.in  LumiverseType.h  OscPatch.cpp  OscPatch.h  Patch.h  Rig.cpp  Rig.h
Lumiverse/source/LumiverseCore/DMX/: ArtNetInterface.cpp  ArtNetInterface.h  DMXDevicePatch.cpp  DMXDevicePatch.h  DMXInterface.h  DMXPatch.cpp  DMXPatch.h  DMXPro2Interface.cpp  DMXPro2Interface.h  KiNetInterface.cpp  KiNetInterface.h  OLAInterface.cpp  OLAInterface.h  pro_driver.h
Lumiverse/source/LumiverseCore/LMS/: LMSPatch.cpp  LMSPatch.h
Lumiverse/source/LumiverseCore/Simulation/: ArnoldAnimationPatch.cpp  ArnoldAnimationPatch.h  ArnoldFileFrameManager.cpp  ArnoldFileFrameManager.h  ArnoldFrameManager.h  ArnoldInterface.cpp  ArnoldInterface.h  ArnoldMemoryFrameManager.cpp  ArnoldMemoryFrameManager.h  ArnoldParameterVector.h  ArnoldPatch copy.cpp  ArnoldPatch copy.h  ArnoldPatch.cpp  ArnoldPatch.h  ArnoldPatch.h.orig  ArnoldWindowDriver.cpp  ArnoldWindowDriver.h  CachingArnoldInterface.cpp  CachingArnoldInterface.h  Compositor.cpp  Compositor.h  DistributedArnoldInterface.cpp  DistributedArnoldInterface.h  DistributedCachingArnoldInterface.cpp  DistributedCachingArnoldInterface.h  EXRLayer.cpp  EXRLayer.h  PhotoAnimationPatch.cpp  PhotoAnimationPatch.h  PhotoPatch.cpp  PhotoPatch.h  Pixel.h  SimulationAnimationPatch.cpp  SimulationAnimationPatch.h  SimulationPatch.cpp  SimulationPatch.h  ToneMapper.cpp  ToneMapper.h  imageio.cpp  imageio.h  (+1 more)
Lumiverse/source/LumiverseCore/Simulation/Dumiverse/: .gitignore  Dumiverse.cpp  Dumiverse.h  Dumiverse.i  Dumiverse_endpoints.h  binding_make.gyp  dumiverse.js  node_make.py  package.json
Lumiverse/source/LumiverseCore/Simulation/SDLmain/: CMakeLists.txt
Lumiverse/source/LumiverseCore/lib/: CMakeLists.txt
Lumiverse/source/LumiverseCore/lib/Eigen/: CMakeLists.txt
Lumiverse/source/LumiverseCore/lib/clp/: CMakeLists.txt  ClpConfig.h  ClpConfig.h.in  ClpPdco.cpp  CoinFinite.cpp  CoinFinite.hpp  CoinSignal.hpp  config.h  config.h.in  config_coinutils.h.in
Lumiverse/source/LumiverseCore/lib/ftd2xx/: FTD2XX.H
Lumiverse/source/LumiverseCore/lib/libartnet/: CMakeLists.txt  artnet.c  artnet.h  common.h  config.h  config.h.in  endian.h  misc.c  network.c  packets.h  private.h  transmit.c
Lumiverse/source/LumiverseCore/lib/libjson/: CMakeLists.txt  JSONOptions.h
Lumiverse/source/LumiverseCore/lib/libpng/: libpng.lib  zconf.h  zlib.lib
Lumiverse/source/LumiverseCore/types/: LumiverseColor.cpp  LumiverseColor.h  LumiverseColorLib.cpp  LumiverseColorLib.h  LumiverseEnum.cpp  LumiverseEnum.h  LumiverseFloat.cpp  LumiverseFloat.h  LumiverseOrientation.cpp  LumiverseOrientation.h  LumiverseTypeUtils.cpp  LumiverseTypeUtils.h  LumiverseVector.h
Lumiverse/source/LumiverseDemo/: LumiverseDemoConfig.h.in  test.cpp
Lumiverse/source/LumiverseShowControl/: AbstractTimeline.h  CMakeLists.txt  Cue.cpp  Cue.h  CueLightDemo.cpp  CueList.cpp  CueList.h  Keyframe.cpp  Keyframe.h  Layer.cpp  Layer.h  LumiverseShowControl.h  PBridge.rig.json  Playback.cpp  Playback.h  Programmer.cpp  Programmer.h  SineWave.cpp  SineWave.h  Snapshot.cpp  Snapshot.h  Timeline.cpp  Timeline.h
Lumiverse/source/Test/: ArnoldFrameManagerTests.cpp  ArnoldFrameManagerTests.h  ArnoldInterfaceTests.cpp  ArnoldInterfaceTests.h  ArnoldParameterVectorTests.cpp  ArnoldParameterVectorTests.h  CMakeLists.txt  DeviceTests.cpp  DeviceTests.h  DistributedArnoldInterfaceTests.cpp  DistributedArnoldInterfaceTests.h  PlaybackTests.cpp  PlaybackTests.h  RegressiveTest.cpp  RegressiveTest.h  RigTests.cpp  RigTests.h  TestMain.cpp  TypeTests.cpp  TypeTests.h  testRig.json
OpenLL/source/LumiverseCore/: CMakeLists.txt  Device.cpp  Device.h  DeviceSet.cpp  DeviceSet.h  Logger.cpp  Logger.h  LumiverseCore.h  OpenLLType.h  Patch.h  Rig.cpp
OpenLL/source/LumiverseCore/DMX/: DMXDevicePatch.h  DMXPatch.h  DMXPro2Interface.h  pro_driver.h
OpenLL/source/LumiverseCore/types/: LumiverseFloat.h  OpenLLFloat.h
(+179 files in other folders)
